# kbai

./: Makefile  README.md  pyproject.toml
scripts/: plotcoords.py
src/kbai/: __init__.py  cli.py  debug.py  demo.py  detector.py  easings.py  encoder.py  image.py  main.py  structs.py  transitions.py
tests/: conftest.py  test_encoder.py
